maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:34: error: not found: value void
  if (x!=0){ if  ( getIndication(x-1,y)==message-1){void setDirection(Direction.SOUTH)}}
                                                    ^JediEscaper:35: error: not found: value void
  if (x!=getMondeLargeur()-1){if (getIndication(x+1,y)==message-1){void setDirection(Direction.NORTH)}}
                                                                   ^JediEscaper:36: error: not found: value void
  if (y!=getMondeHauteur()-1){if (getIndication(x,y+1)==message-1){void setDirection(Direction.EAST)}}
                                                                   ^JediEscaper:37: error: not found: value void
  if (y!=0){if (!aMurNord(x,y) && getIndication(x,y-1)==message-1){void setDirection(Direction.WEST)}}}
                                                                   ^